--- a/libs/components/src/lib/components/calendar/calendar.component.less
+++ b/libs/components/src/lib/components/calendar/calendar.component.less
@@ -1,23 +1,17 @@
-@verticalSpace: 1rem;
-@horizontalSpace: 1.125rem;
-@itemSize: 2.25rem;
-@paginationSize: 1.5rem;
-@calendarSize: @itemSize * 7;
-@height: @paginationSize + @verticalSpace + @calendarSize;
+@paddings: 16px;
+@paginationHeight: 40px;
+@calendarWidth: 280px;
+@calendarHeight: 312px + @paginationHeight;
 
 :host {
   display: block;
-  height: calc(@height + var(--prizm-calendar-footer-height, 0));
-  width: @calendarSize;
-  padding: 16px;
+  height: calc(@calendarHeight + var(--prizm-calendar-footer-height, 0));
+  width: @calendarWidth;
+  padding: @paddings;
   box-sizing: content-box;
 }
 
 .z-scrollbar {
-  height: @paginationSize + @verticalSpace + @calendarSize - 2rem;
-  width: @calendarSize + @horizontalSpace;
-}
-
-.z-pagination {
-  margin-bottom: @verticalSpace;
+  height: @calendarHeight - @paginationHeight - (@paddings * 2);
+  width: @calendarWidth + @paddings;
 }
