--- a/libs/components/src/lib/components/internal/primitive-spin-button/primitive-spin-button.template.html
+++ b/libs/components/src/lib/components/internal/primitive-spin-button/primitive-spin-button.template.html
@@ -19,7 +19,7 @@
     icon="angle-left"
     appearance="secondary"
     [class.z-arrow_hidden]="leftComputedDisabled"
-    [title]="texts[0]"
+    [prizmHint]="texts[0]"
     [focusable]="false"
     (click)="onLeftClick()"
   ></button>
@@ -36,7 +36,7 @@
     icon="angle-right"
     [appearanceType]="mode"
     [class.z-arrow_hidden]="rightComputedDisabled"
-    [title]="texts[1]"
+    [prizmHint]="texts[1]"
     [focusable]="false"
     (click)="onRightClick()"
   ></button>
