--- a/libs/components/src/styles/mixins/picker.less
+++ b/libs/components/src/styles/mixins/picker.less
@@ -85,6 +85,7 @@
     &_interval {
       &:before {
         background: var(--prizm-button-primary-ghost-active);
+        border-radius: unset;
 
         :host._single & {
           background-color: var(--prizm-button-primary-ghost-active);
