fix: calendar range should hilight only choosen year and month #1465

--- a/libs/components/src/lib/components/calendar-month/calendar-month.component.html
+++ b/libs/components/src/lib/components/calendar-month/calendar-month.component.html
@@ -4,6 +4,10 @@
     [max]="max"
     [initialItem]="year"
     [value]="value"
+    [intervalSupport]="true"
+    [style.--prizm-year-item-widtn]="'84px'"
+    [style.--prizm-year-item-height]="'44px'"
+    [style.--prizm-year-picker-widtn]="'256px'"
     (yearClick)="onPickerYearClick($event)"
   ></prizm-primitive-year-picker>
 </prizm-scrollbar>
