--- a/libs/components/src/lib/components/internal/primitive-calendar/primitive-calendar.component.less
+++ b/libs/components/src/lib/components/internal/primitive-calendar/primitive-calendar.component.less
@@ -86,3 +86,14 @@
     background-color: var(--prizm-calendar-day-status-success, var(--prizm-status-success-primary-default));
   }
 }
+
+[data-range='single']:not([data-state='hovered']) {
+  .z-status {
+    &[data-prizm-status='index'] {
+      background-color: var(
+        --prizm-calendar-day-status-secondary-default,
+        var(--prizm-v3-status-info-secondary-default)
+      );
+    }
+  }
+}
