--- a/libs/components/src/lib/components/internal/primitive-calendar-range/primitive-calendar-range.component.html
+++ b/libs/components/src/lib/components/internal/primitive-calendar-range/primitive-calendar-range.component.html
@@ -8,6 +8,7 @@
   [value]="value"
   [disabledItemHandler]="disabledItemHandler"
   [showAdjacent]="false"
+  [rangeState]="rangeStates[0]"
   (dayClick)="onDayClick($event)"
   (monthChange)="onSectionFirstViewedMonth($event)"
 >
@@ -25,6 +26,7 @@
   [value]="value"
   [disabledItemHandler]="disabledItemHandler"
   [showAdjacent]="false"
+  [rangeState]="rangeStates[1]"
   (dayClick)="onDayClick($event)"
   (monthChange)="onSectionSecondViewedMonth($event)"
 >
