fix: calendar year bouncing on hover

--- a/libs/components/src/styles/mixins/picker.less
+++ b/libs/components/src/styles/mixins/picker.less
@@ -12,12 +12,12 @@
   }
 
   .z-item {
+    border: 1px solid transparent;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
     flex: 1;
-    // height: 100%;
     height: @itemHeight;
     border-radius: 2px;
     color: var(--prizm-text-icon-secondary);
@@ -62,7 +62,6 @@
       .z-item {
         border: 1px solid var(--prizm-v3-button-primary-solid-default);
         color: var(--prizm-v3-button-primary-solid-default);
-        // height: @itemHeight;
         width: @itemWidth;
 
         &_unavailable {
