fix: calendar year bouncing on hover

--- a/libs/components/src/lib/components/calendar-month/calendar-month.component.less
+++ b/libs/components/src/lib/components/calendar-month/calendar-month.component.less
@@ -30,6 +30,7 @@
 
     .z-item {
       color: var(--prizm-v3-button-primary-solid-hover) !important;
+      border-color: var(--prizm-v3-button-ghost-hover);
     }
   }
 }
