fix: calendar year bouncing on hover

--- a/libs/components/src/lib/components/calendar-month/calendar-month.component.less
+++ b/libs/components/src/lib/components/calendar-month/calendar-month.component.less
@@ -29,7 +29,8 @@
     background-color: var(--prizm-button-ghost-hover);
 
     .z-item {
-      color: var(--prizm-button-primary-solid-hover) !important;
+      color: var(--prizm-v3-button-primary-solid-hover) !important;
+      border-color: var(--prizm-v3-button-ghost-hover);
     }
   }
 }
