--- a/libs/components/src/styles/mixins/picker.less
+++ b/libs/components/src/styles/mixins/picker.less
@@ -60,7 +60,7 @@
       }
 
       .z-item {
-        border: 1px solid var(--prizm-v3-button-primary-solid-default);
+        border-color: var(--prizm-v3-button-primary-solid-default);
         color: var(--prizm-v3-button-primary-solid-default);
         width: @itemWidth;
 
@@ -82,6 +82,9 @@
     }
 
     &_interval {
+      & > .z-item {
+        border-color: var(--prizm-v3-button-primary-ghost-active);
+      }
       &:before {
         background: var(--prizm-button-primary-ghost-active);
         border-radius: unset;
@@ -125,7 +128,8 @@
 
     &[data-range] {
       &:not([data-state='hovered']) > .z-item {
-        color: var(--prizm-text-icon-exception);
+        color: var(--prizm-v3-text-icon-exception);
+        border-color: var(--prizm-v3-button-primary-solid-default);
 
         &:before,
         &:after {
@@ -134,8 +138,9 @@
       }
 
       &[data-state='hovered'] > .z-item {
-        background-color: var(--prizm-button-ghost-hover);
-        color: var(--prizm-button-primary-solid-hover);
+        background-color: var(--prizm-v3-button-ghost-hover);
+        color: var(--prizm-v3-button-primary-solid-hover);
+        border-color: var(--prizm-v3-button-ghost-hover);
       }
 
       &[data-state='hovered'] > .z-item:before,
@@ -187,8 +192,9 @@
     }
 
     &[data-state='hovered']:not([data-range]):not(.z-cell_today) > .z-item {
-      background-color: var(--prizm-button-ghost-hover);
-      color: var(--prizm-button-primary-solid-hover);
+      background-color: var(--prizm-v3-button-ghost-hover);
+      border-color: var(--prizm-v3-button-ghost-hover);
+      color: var(--prizm-v3-button-primary-solid-hover);
     }
 
     &[data-state='pressed']:hover:not([data-range]) > .z-item {
