fix: outline removed for breadcrumb content projection example

--- a/apps/doc/src/app/components/breadcrumbs/examples/breadcrumbs-projection-basic/breadcrumbs-example-projection.component.less
+++ b/apps/doc/src/app/components/breadcrumbs/examples/breadcrumbs-projection-basic/breadcrumbs-example-projection.component.less
@@ -4,6 +4,7 @@ a {
   line-height: 16px;
   color: var(--prizm-text-icon-tertiary);
   text-decoration: none;
+  outline: none;
 
   &:hover {
     color: var(--prizm-text-icon-link-hover);
