feat(doc/icons): update documentation

--- a/apps/doc/src/app/components/icons/base/examples/base/icons-base-example.component.html
+++ b/apps/doc/src/app/components/icons/base/examples/base/icons-base-example.component.html
@@ -1,3 +1,13 @@
+<ng-container *prizmIfLang="'russian'; else eng">
+  <div class="description">
+    Для использования иконок вы должны предварительно зарегистрировать их с помощью нашего сервиса.
+  </div>
+</ng-container>
+
+<ng-template #eng>
+  <div class="description">To use the icons, you must first register them using our service.</div>
+</ng-template>
+
 <div>
   <h4>SVG: Base size</h4>
 
