--- a/libs/components/src/lib/components/file-upload/file-upload.component.less
+++ b/libs/components/src/lib/components/file-upload/file-upload.component.less
@@ -59,7 +59,7 @@
 
 .file {
   display: grid;
-  grid-template-columns: 44px 8px fit-content(60%) auto 24px 24px;
+  grid-template-columns: 44px 8px fit-content(60%) auto 24px 8px 24px;
   grid-template-rows: 24px 20px;
   align-items: end;
   &:not(:last-child) {
@@ -126,7 +126,7 @@
   }
 
   &__delete-btn {
-    grid-column-start: 6;
+    grid-column-start: 7;
   }
 
   &__progress {
