feat(docs/icons): added new page with all icons register example

--- a/apps/doc/src/app/components/icons/base/icons.component.html
+++ b/apps/doc/src/app/components/icons/base/icons.component.html
@@ -10,6 +10,10 @@
       <prizm-icons-base-example></prizm-icons-base-example>
     </prizm-doc-example>
 
+    <prizm-doc-example id="all" [content]="exampleAll" heading="All Icons">
+      <prizm-icons-all-example></prizm-icons-all-example>
+    </prizm-doc-example>
+
     <prizm-doc-example id="lazy" [content]="exampleLazy" heading="With Lazy Load">
       <prizm-icons-lazy-example></prizm-icons-lazy-example>
     </prizm-doc-example>
