fix: version fix for cron switcher #1494

--- a/libs/components/src/lib/components/cron/cron.component.html
+++ b/libs/components/src/lib/components/cron/cron.component.html
@@ -49,7 +49,7 @@
     >
       <input
         #humarReadableElem
-        *prizmLet="$any(valueAsString$ | async) | prizmCronHumanReadable | async as humanReadableStr"
+        *prizmLet="$any(valueAsString$ | async) | prizmCronHumanReadable as humanReadableStr"
         [prizmHint]="humanReadableStr"
         [readonly]="true"
         [prizmHintCanShow]="prizmIsTextOverflow(humarReadableElem.elementRef.nativeElement)"
