fix(components/navigation-menu): add icons, remove transformer from doc

--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-item/prizm-navigation-menu-item.component.html
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-item/prizm-navigation-menu-item.component.html
@@ -29,7 +29,7 @@
   <button
     *ngIf="goToButtonsVisible"
     [size]="'m'"
-    [icon]="'arrows-corner-left-up'"
+    [icon]="'arrow-turn-left-up'"
     [appearance]="'secondary'"
     [appearanceType]="'ghost'"
     (click)="$event.stopPropagation(); goToParentItem.emit(item)"
@@ -38,7 +38,7 @@
   <button
     *ngIf="goToButtonsVisible"
     [size]="'m'"
-    [icon]="'arrows-arrow-up-level'"
+    [icon]="'arrow-up-to-dotted-line'"
     [appearance]="'secondary'"
     [appearanceType]="'ghost'"
     (click)="$event.stopPropagation(); goToRootItem.emit(item)"
