--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-toolbar/prizm-navigation-menu-toolbar.component.html
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-toolbar/prizm-navigation-menu-toolbar.component.html
@@ -30,7 +30,7 @@
           *ngIf="toolbarConfig.folderMode"
           [pseudoPressed]="viewMode === 'folder'"
           [size]="'m'"
-          [icon]="'files-folder'"
+          [icon]="'folder'"
           [appearance]="'secondary'"
           [appearanceType]="'ghost'"
           (click)="toolbarService.changeViewMode('folder')"
