--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu/prizm-navigation-menu.component.html
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu/prizm-navigation-menu.component.html
@@ -12,7 +12,7 @@
         <button
           *ngIf="headerConfiguration.showSettings"
           [size]="'m'"
-          [icon]="'settings'"
+          [icon]="'gear-8-edge'"
           [appearance]="'secondary'"
           [appearanceType]="'ghost'"
           (click)="handleSettingsClicked()"
