--- a/apps/doc/src/app/components/checkbox/checkbox-example.component.html
+++ b/apps/doc/src/app/components/checkbox/checkbox-example.component.html
@@ -97,7 +97,7 @@
     <ol class="b-demo-steps">
       <li>
         <p>
-          Импортируйте <code>PrizmCheckboxModule</code>
+          Импортируйте <code>PrizmCheckboxComponent</code>
           в модуль в котором хотите использовать компоненту
         </p>
 
