fix: input icons example fixed

--- a/apps/doc/src/app/components/input/input-text/examples/input-icon-buttons-example/input-icon-buttons-example.component.html
+++ b/apps/doc/src/app/components/input/input-text/examples/input-icon-buttons-example/input-icon-buttons-example.component.html
@@ -23,7 +23,7 @@
 <prizm-input-layout label="Заголовок">
   <ng-container prizm-input-left>
     <button prizmInputIconButton="arrow-rotate-right"></button>
-    <button prizmInputIconButton="badges-tag"></button>
+    <button prizmInputIconButton="label"></button>
   </ng-container>
 
   <input prizmInput />
