--- a/apps/doc/src/app/components/checkbox/checkbox-example.component.html
+++ b/apps/doc/src/app/components/checkbox/checkbox-example.component.html
@@ -110,7 +110,7 @@
       <li>
         <p>
           Импортируйте <code>PrizmCheckboxComponent</code>
-          в модуль в котором хотите использовать компоненту
+          в модуль в котором хотите использовать компонент
         </p>
 
         <prizm-doc-code [code]="setupModule" filename="MyComponent.module.ts"></prizm-doc-code>
