fix: removed hover and focus if loading #1485

--- a/libs/components/src/lib/components/toggle/toggle.component.html
+++ b/libs/components/src/lib/components/toggle/toggle.component.html
@@ -37,7 +37,7 @@
     [attr.aria-checked]="value"
     [disabled]="disabled"
     [prizmChecked]="checked"
-    [prizmFocusable]="focusable"
+    [prizmFocusable]="!showLoader && focusable"
     (prizmCheckedChange)="onChecked($event)"
     (prizmFocusedChange)="onFocused($event)"
     (prizmHoveredChange)="onHovered($event)"
