--- a/libs/components/src/lib/components/file-upload/file-upload.component.html
+++ b/libs/components/src/lib/components/file-upload/file-upload.component.html
@@ -48,7 +48,8 @@
       </div>
 
       <div class="file__info">
-        <span class="file__name">{{ item.key }}</span>
+        <span class="file__name">{{ item.key | prizmFileName }}</span>
+        <span class="file__extension">{{ item.key | prizmFileExtension }}</span>
         <span class="file__size">{{ item.value.file.size | prizmFileSize }}</span>
       </div>
 
