--- a/libs/components/src/lib/components/file-upload/file-upload.component.less
+++ b/libs/components/src/lib/components/file-upload/file-upload.component.less
@@ -96,17 +96,23 @@
     overflow: hidden;
     text-overflow: ellipsis;
     display: flex;
-    gap: 8px;
     align-items: baseline;
   }
 
-  &__name {
+  &__name,
+  &__extension {
     font-weight: 600;
     font-size: 14px;
     line-height: 20px;
     color: var(--prizm-v3-text-icon-primary);
   }
+  &__name {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
   &__size {
+    margin-left: 8px;
     font-size: 10px;
     line-height: 12px;
     color: var(--prizm-v3-text-icon-tertiary);
