fix: incorrect examples for bar stacked and bar groupd charts  #1507

--- a/apps/doc/src/app/charts/bar/examples/stacked/prizm-charts-stacked-bar-example.component.html
+++ b/apps/doc/src/app/charts/bar/examples/stacked/prizm-charts-stacked-bar-example.component.html
@@ -1,5 +1,6 @@
 <prizm-charts-bar
   [data]="data"
+  [label]="label"
   [options]="{ isStack: true }"
   [theme]="$any(prizmTheme.changesTheme$ | async)"
   xField="value"
