--- a/apps/doc/src/app/charts/bar/examples/group/prizm-charts-group-bar-example.component.html
+++ b/apps/doc/src/app/charts/bar/examples/group/prizm-charts-group-bar-example.component.html
@@ -1,6 +1,6 @@
 <prizm-charts-bar
   [data]="data"
-  [label]="label"
+  [options]="options"
   [theme]="$any(prizmTheme.changesTheme$ | async)"
   xField="value"
   yField="label"
