--- a/libs/components/src/lib/components/header/components/prizm-header-dropdown/prizm-header-dropdown.component.html
+++ b/libs/components/src/lib/components/header/components/prizm-header-dropdown/prizm-header-dropdown.component.html
@@ -16,7 +16,15 @@
         class="screen__icon"
         [iconClass]="data[currentScreenIdx]?.icon || 'files-folder'"
       ></prizm-icon>
-      <span class="screen__title">{{ data[currentScreenIdx]?.title }}</span>
+      <span
+        class="screen__title"
+        #title
+        [prizmHint]="data[currentScreenIdx]?.title"
+        [prizmHintCanShow]="prizmIsTextOverflow(title)"
+        prizmHintDirection="b"
+      >
+        {{ data[currentScreenIdx]?.title }}
+      </span>
     </div>
     <prizm-icon class="dropdown__icon" iconClass="chevrons-menu-right"></prizm-icon>
   </button>
@@ -32,7 +40,14 @@
     >
       <div class="screen">
         <prizm-icon class="screen__icon" [iconClass]="item?.icon || 'files-folder'"></prizm-icon>
-        <span class="screen__title">{{ item?.title }}</span>
+        <span
+          class="screen__title"
+          #title
+          [prizmHint]="item?.title"
+          [prizmHintCanShow]="prizmIsTextOverflow(title)"
+        >
+          {{ item?.title }}
+        </span>
       </div>
     </div>
   </prizm-data-list>
