--- a/libs/components/src/lib/components/navigation/components/prizm-navigation-item-expandable/prizm-navigation-item-expandable.component.html
+++ b/libs/components/src/lib/components/navigation/components/prizm-navigation-item-expandable/prizm-navigation-item-expandable.component.html
@@ -4,7 +4,15 @@
       <!--      <prizm-icon [iconClass]="menuItem?.icon || 'files-folder'"></prizm-icon>-->
       <prizm-icons-full [name]="menuItem?.icon || 'folder'"></prizm-icons-full>
     </div>
-    <span class="nav__title">{{ menuItem?.title }}</span>
+    <span
+      class="nav__title"
+      #title
+      [prizmHint]="menuItem?.title"
+      [prizmHintCanShow]="prizmIsTextOverflow(title)"
+      prizmHintDirection="b"
+    >
+      {{ menuItem?.title }}
+    </span>
 
     <div class="nav__status">
       <div
