--- a/libs/components/src/lib/components/header/components/prizm-header-dropdown/prizm-header-dropdown.component.html
+++ b/libs/components/src/lib/components/header/components/prizm-header-dropdown/prizm-header-dropdown.component.html
@@ -9,7 +9,10 @@
     class="dropdown"
     *ngIf="data.length > 0"
     [class.dropdown_active]="openDropdown"
+    [prizmHint]="data[currentScreenIdx]?.title"
+    [prizmHintCanShow]="prizmIsTextOverflow(title)"
     (click)="openDropdown = !openDropdown"
+    prizmHintDirection="b"
   >
     <div class="screen">
       <!--      <prizm-icon-->
@@ -20,13 +23,7 @@
         class="screen__icon"
         [name]="data[currentScreenIdx]?.icon || iconFilesFolder.name"
       ></prizm-icons-full>
-      <span
-        class="screen__title"
-        #title
-        [prizmHint]="data[currentScreenIdx]?.title"
-        [prizmHintCanShow]="prizmIsTextOverflow(title)"
-        prizmHintDirection="b"
-      >
+      <span class="screen__title" #title>
         {{ data[currentScreenIdx]?.title }}
       </span>
     </div>
@@ -41,17 +38,14 @@
       class="screen-list__item"
       *ngFor="let item of data; let i = index"
       [class.selected]="i === currentScreenIdx"
+      [prizmHint]="item?.title"
+      [prizmHintCanShow]="prizmIsTextOverflow(title)"
       (click)="changeScreen(i)"
     >
       <div class="screen">
         <!--        <prizm-icon class="screen__icon" [iconClass]="item?.icon || 'files-folder'"></prizm-icon>-->
         <prizm-icons-full class="screen__icon" [name]="item?.icon || iconFilesFolder.name"></prizm-icons-full>
-        <span
-          class="screen__title"
-          #title
-          [prizmHint]="item?.title"
-          [prizmHintCanShow]="prizmIsTextOverflow(title)"
-        >
+        <span class="screen__title" #title>
           {{ item?.title }}
         </span>
       </div>
