--- a/libs/components/src/lib/components/navigation/components/prizm-navigation-item-expandable/prizm-navigation-item-expandable.component.html
+++ b/libs/components/src/lib/components/navigation/components/prizm-navigation-item-expandable/prizm-navigation-item-expandable.component.html
@@ -1,16 +1,17 @@
 <div class="container">
-  <div class="nav" [class.nav_active]="isActive$ | async" (click)="navClick()">
+  <div
+    class="nav"
+    [class.nav_active]="isActive$ | async"
+    [prizmHint]="menuItem?.title"
+    [prizmHintCanShow]="prizmIsTextOverflow(title)"
+    (click)="navClick()"
+    prizmHintDirection="b"
+  >
     <div class="nav__icon" [style.marginLeft.px]="deep > 0 ? 8 + 16 * deep : 0">
       <!--      <prizm-icon [iconClass]="menuItem?.icon || 'files-folder'"></prizm-icon>-->
       <prizm-icons-full [name]="menuItem?.icon || 'folder'"></prizm-icons-full>
     </div>
-    <span
-      class="nav__title"
-      #title
-      [prizmHint]="menuItem?.title"
-      [prizmHintCanShow]="prizmIsTextOverflow(title)"
-      prizmHintDirection="b"
-    >
+    <span class="nav__title" #title>
       {{ menuItem?.title }}
     </span>
 
