--- a/libs/components/src/lib/components/navigation/components/prizm-navigation-item-simple/prizm-navigation-item-simple.component.html
+++ b/libs/components/src/lib/components/navigation/components/prizm-navigation-item-simple/prizm-navigation-item-simple.component.html
@@ -1,11 +1,11 @@
-<div class="nav" [class.nav_active]="isActive$ | async" (click)="navClick()">
-  <span
-    class="nav__title"
-    #title
-    [style.marginLeft.px]="deep > 0 ? (deep - 1) * 24 : 0"
-    [prizmHint]="menuItem?.title"
-    [prizmHintCanShow]="prizmIsTextOverflow(title)"
-  >
+<div
+  class="nav"
+  [class.nav_active]="isActive$ | async"
+  [prizmHint]="menuItem?.title"
+  [prizmHintCanShow]="prizmIsTextOverflow(title)"
+  (click)="navClick()"
+>
+  <span class="nav__title" #title [style.marginLeft.px]="deep > 0 ? (deep - 1) * 24 : 0">
     {{ menuItem?.title }}
   </span>
   <div class="nav__status">
