fix: fix scroll in sticky example #670

--- a/apps/doc/src/app/components/sticky/examples/base/sticky-base-example.component.less
+++ b/apps/doc/src/app/components/sticky/examples/base/sticky-base-example.component.less
@@ -1,6 +1,5 @@
 .table {
   display: block;
-  width: 1000px;
 
   .row {
     display: grid;
@@ -10,6 +9,7 @@
     .col {
       height: 30px;
       border: 1px solid rgba(128, 128, 128, 0.25);
+      min-width: 65px;
     }
 
     &.header {
