fix: register icons for toggle live demo

--- a/apps/doc/src/app/components/toggle/toggle-example.component.html
+++ b/apps/doc/src/app/components/toggle/toggle-example.component.html
@@ -63,7 +63,7 @@
         documentationPropertyType="PolymorphContent<PrizmContextWithImplicit<PrizmSizeL | PrizmSizeM>>"
         documentationPropertyMode="input"
       >
-        Icon On
+        Icon On (Don't forget to register icons)
       </ng-template>
 
       <ng-template
@@ -73,7 +73,7 @@
         documentationPropertyType="PolymorphContent<PrizmContextWithImplicit<PrizmSizeL | PrizmSizeM>>"
         documentationPropertyMode="input"
       >
-        Icon Off
+        Icon Off (Don't forget to register icons)
       </ng-template>
 
       <ng-template
