fix: name hint #1541

--- a/libs/components/src/lib/components/file-upload/file-upload.component.less
+++ b/libs/components/src/lib/components/file-upload/file-upload.component.less
@@ -94,11 +94,14 @@
     grid-column-end: 4;
     padding-right: 8px;
     overflow: hidden;
-    text-overflow: ellipsis;
     display: flex;
     align-items: baseline;
   }
 
+  &__full-name {
+    display: flex;
+    overflow: hidden;
+  }
   &__name,
   &__extension {
     font-weight: 600;
