--- a/libs/components/src/lib/components/file-upload/file-upload.component.html
+++ b/libs/components/src/lib/components/file-upload/file-upload.component.html
@@ -48,9 +48,15 @@
         </ng-template>
       </div>
 
-      <div class="file__info" [prizmHint]="item.key" [prizmHintCanShow]="prizmIsTextOverflow(fileName)">
-        <span class="file__name" #fileName>{{ item.key | prizmFileName }}</span>
-        <span class="file__extension">{{ item.key | prizmFileExtension }}</span>
+      <div class="file__info">
+        <div
+          class="file__full-name"
+          [prizmHint]="item.key"
+          [prizmHintCanShow]="prizmIsTextOverflow(fileName)"
+        >
+          <span class="file__name" #fileName>{{ item.key | prizmFileName }}</span>
+          <span class="file__extension">{{ item.key | prizmFileExtension }}</span>
+        </div>
         <span class="file__size">{{ item.value.file.size | prizmFileSize }}</span>
       </div>
 
