--- a/libs/components/src/lib/components/cron/components/hour/hour.component.html
+++ b/libs/components/src/lib/components/cron/components/hour/hour.component.html
@@ -14,7 +14,10 @@
           (changeEvent)="cronUiState.setEvery()"
         ></prizm-radio-button>
       </div>
-      <div class="content row">Каждый час</div>
+      <div class="content row">
+        {{ cronI18n$ | async | prizmPluck : ['general', 'everyMale'] }}
+        {{ cronI18n$ | async | prizmPluck : ['hour', 'hour'] }}
+      </div>
     </label>
   </ng-container>
 
@@ -34,7 +37,7 @@
         ></prizm-radio-button>
       </div>
       <div class="content row">
-        <span>Каждый</span>
+        <span>{{ cronI18n$ | async | prizmPluck : ['general', 'everyMale'] }}</span>
         <prizm-cron-carousel
           [content]="cronUiState.list | prizmPluck : ['everyChosenTimesAfterChosen', 'on']"
           [value]="cronUiState.state$ | async | prizmPluck : ['everyChosenTimesAfterChosen', 'on']"
@@ -44,7 +47,7 @@
             {{ value }}
           </ng-template>
         </prizm-cron-carousel>
-        <span>час, начиная с</span>
+        <span>{{ cronI18n$ | async | prizmPluck : ['hour', 'hourSince'] }}</span>
 
         <prizm-cron-carousel
           [content]="cronUiState.list | prizmPluck : ['everyChosenTimesAfterChosen', 'after']"
@@ -71,7 +74,7 @@
         ></prizm-radio-button>
       </div>
       <div class="content column">
-        <span>Выбранный час (выбор одного или нескольких)</span>
+        <span>{{ cronI18n$ | async | prizmPluck : ['hour', 'selectedHour'] }}</span>
         <prizm-cron-schedule
           #scheduleComponent
           [items]="cronUiState.list.specified"
@@ -98,14 +101,18 @@
         ></prizm-radio-button>
       </div>
       <div class="content">
-        <span>Каждый час с</span>
+        <span>
+          {{ cronI18n$ | async | prizmPluck : ['general', 'everyMale'] }}
+          {{ cronI18n$ | async | prizmPluck : ['hour', 'hour'] }}
+          {{ cronI18n$ | async | prizmPluck : ['general', 'from'] }}
+        </span>
         <prizm-cron-carousel
           #start
           [content]="cronUiState.list.between.start"
           [value]="cronUiState.state$ | async | prizmPluck : ['between', 'start']"
           (valueChange)="cronUiState.updateBetween({ start: $event })"
         ></prizm-cron-carousel>
-        <span>до</span>
+        <span>{{ cronI18n$ | async | prizmPluck : ['general', 'to'] }}</span>
         <prizm-cron-carousel
           #end
           [content]="cronUiState.list.between.end"
