--- a/libs/components/src/lib/components/cron/components/month/month.component.html
+++ b/libs/components/src/lib/components/cron/components/month/month.component.html
@@ -14,7 +14,10 @@
           (changeEvent)="cronUiState.setEvery()"
         ></prizm-radio-button>
       </div>
-      <div class="content row">Каждый месяц</div>
+      <div class="content row">
+        {{ cronI18n$ | async | prizmPluck : ['general', 'everyMale'] }}
+        {{ cronI18n$ | async | prizmPluck : ['month', 'month'] }}
+      </div>
     </label>
   </ng-container>
 
@@ -34,7 +37,7 @@
         ></prizm-radio-button>
       </div>
       <div class="content row">
-        <span>Каждый</span>
+        <span>{{ cronI18n$ | async | prizmPluck : ['general', 'everyMale'] }}</span>
         <prizm-cron-carousel
           [content]="cronUiState.list | prizmPluck : ['everyChosenTimesAfterChosen', 'on']"
           [value]="cronUiState.state$ | async | prizmPluck : ['everyChosenTimesAfterChosen', 'on']"
@@ -44,7 +47,7 @@
             {{ value }}
           </ng-template>
         </prizm-cron-carousel>
-        <span>месяц, начиная с</span>
+        <span>{{ cronI18n$ | async | prizmPluck : ['month', 'monthSince'] }}</span>
 
         <prizm-cron-carousel
           [content]="cronUiState.list | prizmPluck : ['everyChosenTimesAfterChosen', 'after']"
@@ -75,7 +78,7 @@
         ></prizm-radio-button>
       </div>
       <div class="content column">
-        <span>Выбранный месяц (выбор одного или нескольких)</span>
+        <span>{{ cronI18n$ | async | prizmPluck : ['month', 'selectedMonth'] }}</span>
         <prizm-cron-schedule
           #schedule
           [items]="cronUiState.list.specified"
@@ -106,7 +109,11 @@
         ></prizm-radio-button>
       </div>
       <div class="content">
-        <span>Каждый месяц с</span>
+        <span>
+          {{ cronI18n$ | async | prizmPluck : ['general', 'everyMale'] }}
+          {{ cronI18n$ | async | prizmPluck : ['month', 'month'] }}
+          {{ cronI18n$ | async | prizmPluck : ['general', 'from'] }}
+        </span>
         <prizm-cron-carousel
           [content]="cronUiState.list.between.start"
           [value]="cronUiState.state$ | async | prizmPluck : ['between', 'start']"
@@ -116,7 +123,7 @@
             {{ (value ?? 1) - 1 | prizmCronMonth }}
           </ng-template>
         </prizm-cron-carousel>
-        <span>до</span>
+        <span>{{ cronI18n$ | async | prizmPluck : ['general', 'to'] }}</span>
         <prizm-cron-carousel
           [content]="cronUiState.list.between.end"
           [value]="cronUiState.state$ | async | prizmPluck : ['between', 'end']"
