--- a/libs/components/src/lib/components/cron/components/year/year.component.html
+++ b/libs/components/src/lib/components/cron/components/year/year.component.html
@@ -14,7 +14,10 @@
           (changeEvent)="cronUiState.setEvery()"
         ></prizm-radio-button>
       </div>
-      <div class="content row">Каждый год</div>
+      <div class="content row">
+        {{ cronI18n$ | async | prizmPluck : ['general', 'everyMale'] }}
+        {{ cronI18n$ | async | prizmPluck : ['year', 'year'] }}
+      </div>
     </label>
   </ng-container>
 
@@ -34,7 +37,7 @@
         ></prizm-radio-button>
       </div>
       <div class="content row">
-        <span>Каждый</span>
+        <span>{{ cronI18n$ | async | prizmPluck : ['general', 'everyMale'] }}</span>
         <prizm-cron-carousel
           [content]="cronUiState.list | prizmPluck : ['everyChosenTimesAfterChosen', 'on']"
           [value]="cronUiState.state$ | async | prizmPluck : ['everyChosenTimesAfterChosen', 'on']"
@@ -44,7 +47,7 @@
             {{ value }}
           </ng-template>
         </prizm-cron-carousel>
-        <span>год, начиная с</span>
+        <span>{{ cronI18n$ | async | prizmPluck : ['year', 'yearSince'] }}</span>
 
         <prizm-cron-carousel
           [content]="cronUiState.list | prizmPluck : ['everyChosenTimesAfterChosen', 'after']"
@@ -71,7 +74,7 @@
         ></prizm-radio-button>
       </div>
       <div class="content column year">
-        <span>Выбранный год (выбор одного или нескольких)</span>
+        <span>{{ cronI18n$ | async | prizmPluck : ['year', 'selectedYear'] }}</span>
         <div>
           <prizm-input-layout
             class="year-input"
@@ -146,14 +149,18 @@
         ></prizm-radio-button>
       </div>
       <div class="content">
-        <span>Каждый год с</span>
+        <span>
+          {{ cronI18n$ | async | prizmPluck : ['general', 'everyMale'] }}
+          {{ cronI18n$ | async | prizmPluck : ['year', 'year'] }}
+          {{ cronI18n$ | async | prizmPluck : ['general', 'from'] }}
+        </span>
         <prizm-cron-carousel
           #start
           [content]="cronUiState.list.between.start"
           [value]="cronUiState.state$ | async | prizmPluck : ['between', 'start']"
           (valueChange)="cronUiState.updateBetween({ start: $event })"
         ></prizm-cron-carousel>
-        <span>до</span>
+        <span>{{ cronI18n$ | async | prizmPluck : ['general', 'to'] }}</span>
         <prizm-cron-carousel
           #end
           [content]="cronUiState.list.between.end"
