fix: bar example tooltip and code fixed

--- a/apps/doc/src/app/charts/bar/bar.component.html
+++ b/apps/doc/src/app/charts/bar/bar.component.html
@@ -8,7 +8,7 @@
     <prizm-doc-example id="base" [content]="exampleOutline" heading="Base">
       <prizm-charts-bar-example></prizm-charts-bar-example>
     </prizm-doc-example>
-    <prizm-doc-example id="stacked" [content]="exampleOutline" heading="Stacked">
+    <prizm-doc-example id="stacked" [content]="exampleStacked" heading="Stacked">
       <prizm-charts-stacked-bar-example></prizm-charts-stacked-bar-example>
     </prizm-doc-example>
     <prizm-doc-example id="group" [content]="exampleGroup" heading="Group">
